# fem-wave-equation-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  dockerignore
include/: mass_assembler.h  stiffness_assembler.h
src/: main.cpp  mass_assembler.cpp  mass_assembler.h  stiffness_assembler.cpp  stifness_assembler.cpp
tests/: test.cpp
